# TrabalhoAED2

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LeArqOSM_e_GeraArqPoly.c  Makefile  Parser.cpp  README.md  dijkstra.cpp  main.cpp  parser.cpp  parser.h  projects.h
app_aed2/: main.cpp  mainwindow.h  mainwindow.ui
core/: CMakeLists.txt  LeArqOSM_e_GeraArqPoly.c  cli_main.cpp  dijkstra.cpp  parser.cpp  projects.h
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
